--- a/cinema/css/style.css
+++ b/cinema/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+
+
 h2  {color: seagreen;}
 p{font-size: 20px;}
 
@@ -13,7 +15,10 @@ h3  {margin: 10px;}
 h2 a {
     text-decoration: none;
     color: seagreen;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
 }
+
 
 a {text-decoration: none;
 
@@ -27,7 +32,9 @@ a {text-decoration: none;
     color: darkblue;
 }
 
-h2 {font-size: 30px;}
+h2 {font-size: 30px;
+
+}
 
 
 
